Switch order of remark and tags in Person